--- a/Configuration/config.properties
+++ b/Configuration/config.properties
@@ -4,3 +4,4 @@ password=12345
 chromepath=./Drivers\\chromedriver.exe
 iepath=./Drivers\\IEDriverServer.exe
 firefoxpath=./Drivers\\geckodriver.exe
+this sample test
